objects/cic_credit__Credit_Score_Model__c.object
<CustomObject>
    <fields>
        <fullName>cic_credit__Credit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Report</label>
        <referenceTo>cic_credit__Credit_Report__c</referenceTo>
        <relationshipLabel>Credit Score Models</relationshipLabel>
        <relationshipName>Credit_Score_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Maximum_Value__c</fullName>
        <description>creditScoreMaximumValue</description>
        <label>Maximum Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Minimum_Value__c</fullName>
        <description>creditScoreMinimumValue</description>
        <label>Minimum Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Model_Name__c</fullName>
        <label>Model Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit Score Model</label>
    <nameField>
        <displayFormat>CSM-{000000000}</displayFormat>
        <label>Credit Score Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Score Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>